// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages tests Renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread-count badge"
  >
    4
  </div>
</div>
`;

exports[`Messages tests Renders the UI as expected with no unreads 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;
